--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex">
-<!-- Sidebar -->
+  <!-- Sidebar -->
 
-<shared-sidebar></shared-sidebar>
+  <shared-sidebar></shared-sidebar>
 
-<!-- Home Page -->
+  <!-- Home Page -->
+
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 </div>
