--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,11 +1,18 @@
 <div class="row">
-  <div class="col-md-3 col-sm-6">
+  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
     <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Crear imagen -->
+
+      <!--Cuando ponemos le ponemos corchetes a una propiedad de html, le decimos a angular que la puede usar, pudiéndole pasar cosas de nuestro código. Sino, no se podría  -->
+      <!-- Sería algo como razor, donde le podemos pasar variables nuestras -->
+      <img
+        [src]="gif.images.downsized_medium.url"
+        [alt]="gif.title"
+        class="card-img-top"
+      >
 
       <div class="card-body text-white">
         <p class="card-text">
-          Hola Mundo
+          {{gif.title}}
         </p>
       </div>
     </div>
